<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:id="@+id/root"
    tools:context=".NovaBiljkaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/pictureBox"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:backgroundTint="?attr/backgroundColor"
            app:cardCornerRadius="100dp"
            app:cardElevation="6dp"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintBottom_toTopOf="@id/nazivET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/slikaIV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/default_plant_image"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/uslikajBiljkuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            style="@style/ADD_button"
            android:backgroundTint="?attr/colorSurface"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="@id/pictureBox"
            app:layout_constraintStart_toEndOf="@id/pictureBox"
            app:layout_constraintEnd_toEndOf="@id/pictureBox" />

        <EditText
            android:id="@+id/nazivET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="24dp"
            android:background="@null"
            android:hint="@string/name"
            style="@style/ADD_plant_name"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@id/porodicaET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pictureBox" />

        <EditText
            android:id="@+id/porodicaET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/family"
            android:background="@null"
            style="@style/ADD_plant_family"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@id/medicalTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nazivET" />

        <TextView
            android:id="@+id/medicalTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"
            android:text="@string/medical_info"
            style="@style/ADD_heading"
            app:layout_constraintBottom_toTopOf="@id/medicinskoUpozorenjeET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/porodicaET" />

        <EditText
            android:id="@+id/medicinskoUpozorenjeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/warning"
            android:background="@null"
            style="@style/ADD_input"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@id/medicalBenefits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medicalTV" />

        <TextView
            android:id="@+id/medicalBenefits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="12dp"
            android:text="@string/medical_benefits"
            style="@style/ADD_subheading"
            app:layout_constraintBottom_toTopOf="@id/medicinskaKoristLV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medicinskoUpozorenjeET" />

        <ListView
            android:id="@+id/medicinskaKoristLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"
            android:listSelector="@android:color/transparent"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/culinaryTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medicalBenefits" />

        <TextView
            android:id="@+id/culinaryTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"
            android:text="@string/culinary_info"
            style="@style/ADD_heading"
            app:layout_constraintBottom_toTopOf="@id/flavourProfiles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medicinskaKoristLV" />

        <TextView
            android:id="@+id/flavourProfiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="12dp"
            android:text="@string/flavor_profiles"
            style="@style/ADD_subheading"
            app:layout_constraintBottom_toTopOf="@id/profilOkusaLV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/culinaryTV" />

        <ListView
            android:id="@+id/profilOkusaLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/transparent"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/mealSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flavourProfiles" />

        <TextView
            android:id="@+id/mealSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="12dp"
            android:text="@string/meal_suggestions"
            style="@style/ADD_subheading"
            app:layout_constraintBottom_toTopOf="@id/dodajJeloBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilOkusaLV" />

        <EditText
            android:id="@+id/jeloET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:hint="@string/dish"
            android:background="@null"
            style="@style/ADD_input"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toBottomOf="@id/dodajJeloBtn"
            app:layout_constraintEnd_toStartOf="@id/dodajJeloBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/dodajJeloBtn" />

        <Button
            android:id="@+id/dodajJeloBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            style="@style/ADD_button"
            android:backgroundTint="?attr/colorSurface"
            android:elevation="4dp"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toTopOf="@id/jelaLV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/jeloET"
            app:layout_constraintTop_toBottomOf="@id/mealSuggestions" />

        <ListView
            android:id="@+id/jelaLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="@android:color/transparent"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/botanicalTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dodajJeloBtn" />

        <TextView
            android:id="@+id/botanicalTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"
            android:text="@string/botanical_info"
            style="@style/ADD_heading"
            app:layout_constraintBottom_toTopOf="@id/climateTypes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jelaLV" />

        <TextView
            android:id="@+id/climateTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="12dp"
            android:text="@string/climate_types"
            style="@style/ADD_subheading"
            app:layout_constraintBottom_toTopOf="@id/klimatskiTipLV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/botanicalTV" />

        <ListView
            android:id="@+id/klimatskiTipLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"
            android:listSelector="@android:color/transparent"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/soilTypes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/climateTypes" />

        <TextView
            android:id="@+id/soilTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="12dp"
            android:text="@string/soil_types"
            style="@style/ADD_subheading"
            app:layout_constraintBottom_toTopOf="@id/zemljisniTipLV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/klimatskiTipLV" />

        <ListView
            android:id="@+id/zemljisniTipLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"
            android:listSelector="@android:color/transparent"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/dodajBiljkuBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/soilTypes" />

        <Button
            android:id="@+id/dodajBiljkuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/add_plant"
            style="@style/ADD_button"
            android:backgroundTint="?attr/colorSurface"
            android:elevation="4dp"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zemljisniTipLV" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>