...
        android:layout_marginHorizontal="12dp"
        android:elevation="6dp"
        android:background="@drawable/bg_box"
        android:clickable="true"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/optionBox"
        app:layout_constraintBottom_toTopOf="@id/biljkeRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/brzaPretraga">

        <EditText
            android:id="@+id/pretragaET"
            android:layout_width="0dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionBox" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/novaBiljkaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_plant"
        android:layout_margin="18dp"
        app:elevation="4dp"
...
