<resources>
    <string name="app_name" translatable="false">Cuvarkuca</string>

    <string name="medical">Medical</string>
    <string name="culinary">Culinary</string>
    <string name="botanical">Botanical</string>

    <string name="medical_info">Medical information</string>
    <string name="culinary_info">Culinary information</string>
    <string name="botanical_info">Botanical information</string>

    <string name="select_focus">Select the focus</string>
    <string name="remove_filters">Remove filters</string>

    <string name="search">Search</string>
    <string name="loading">Loading…</string>
    <string name="not_available">Not available</string>
    <string name="quick_search">Quick search</string>

    <string-array name="color_names" translatable="false">
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>purple</item>
        <item>brown</item>
    </string-array>

    <string name="camera">Picture plant</string>
    <string name="name">Name</string>
    <string name="family">Family</string>
    <string name="warning">Warning</string>
    <string name="dish">Dish</string>
    <string name="add_dish">Add dish</string>
    <string name="modify_dish">Modify dish</string>
    <string name="add_plant">Add plant</string>
    
    <string name="medical_benefits">Medical benefits</string>
    <string name="flavor_profiles">Flavor profiles</string>
    <string name="meal_suggestions">Meal suggestions</string>
    <string name="climate_types">Climate types</string>
    <string name="soil_types">Soil types</string>

    <string name="too_short">Too short! Minimum is 2 characters.</string>
    <string name="too_long">Too long! Maximum is 40 characters.</string>
    <string name="invalid_name">The correct form is \"Name (Scientific name)\".</string>

    <string name="check_input_fields">Check the input fields.</string>
    <string name="at_least_one_dish">At least one dish should be added.</string>
</resources>