...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageBox"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nazivItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MAIN_plant_name"
            android:drawablePadding="12dp"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintBottom_toTopOf="@+id/focusBox"
...
